fix trait spacing and embed wrapper classes

--- a/source/assets/stylesheets/pages/vision-and-passion/_embed-wrapper.scss
+++ b/source/assets/stylesheets/pages/vision-and-passion/_embed-wrapper.scss
@@ -1,4 +1,4 @@
-.vision-and-passion-wrapper {
+.embed-wrapper {
   @include media-breakpoint-up(xs) {
     padding-bottom: 0;
   }
