--- a/source/assets/stylesheets/pages/working-together/_embed-wrapper.scss
+++ b/source/assets/stylesheets/pages/working-together/_embed-wrapper.scss
@@ -1,4 +1,4 @@
-.working-together-wrapper {
+.embed-wrapper {
   @include media-breakpoint-up(xs) {
     padding-bottom: 0;
   }
